--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     height: 130vh;
     margin: 0;
     background-color: #f0f0f0;
